k8s/ingress/gke-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gke-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.regional-static-ip-name: "static-lb-ip"
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: app-service
            port: 
              number: 80
