k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  rules:
  - http:
      paths:
      - path: /api/payroll
        pathType: Prefix
        backend:
          service:
            name: hr-payroll
            port: 
              number: 9090
      - path: /timesheet
        pathType: Prefix
        backend:
          service:
            name: hr-timesheet
            port: 
              number: 9002
